rust_writer_procedural/tests/ui/compile_fail/mutator_fails_if_implementors_arent_path.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_procedural::mutator;

#[mutator("hello_world")]
struct SomeStruct;

fn main(){}
