rust_writer_procedural/tests/ui/compile_fail/mutator_fails_if_implementors_arent_path.stderr
error: expected identifier
 --> tests/ui/compile_fail/mutator_fails_if_implementors_arent_path.rs:5:11
  |
5 | #[mutator("hello_world")]
  |           ^^^^^^^^^^^^^
